--- a/cjava-clientes-devmongodb.properties
+++ b/cjava-clientes-devmongodb.properties
@@ -1,6 +1,9 @@
 #Propiedades del banner
 application.description = Microservicio productor de Clientes desarrollado con conexión a base de datos MongoDB para ambiente de Desarrollo
 
+#Propiedades de la aplicacion
+cjava-app.mongodb.ddl-auto.create-drop = true
+
 #Propiedades del servidor de aplicaciones para ambiente de Desarrollo
 server.port = 6070
 
