--- a/cjava-clientes-prodmongodb.properties
+++ b/cjava-clientes-prodmongodb.properties
@@ -1,6 +1,9 @@
 #Propiedades del banner
 application.description = Microservicio productor de Clientes desarrollado con conexión a base de datos MongoDB para ambiente de Producción
 
+#Propiedades de la aplicacion
+cjava-app.mongodb.ddl-auto.create-drop = false
+
 #Propiedades del servidor de aplicaciones para ambiente de Produccion
 server.port = 6071
 
