--- a/cjava-clientes-consumidor-dev.properties
+++ b/cjava-clientes-consumidor-dev.properties
@@ -5,5 +5,5 @@ application.description = Microservicio consumidor de Clientes para ambiente de 
 server.port = 3070
 
 #Propiedades del cliente Feign para ambiente de Desarrollo
-cjava-app.clientes.producer.service.name = cjava-exp-p03-clientes	
-cjava-app.clientes.respaldo.service.name = cjava-exp-p03-clientes-respaldo
+cjava-app.clientes.producer.service.name = cjava-clientes
+cjava-app.clientes.respaldo.service.name = cjava-clientes-respaldo
