--- a/cjava-clientes-respaldo-dev.properties
+++ b/cjava-clientes-respaldo-dev.properties
@@ -1,5 +1,5 @@
 #Propiedades del banner
-application.description = Microservicio de respaldo de Socios desarrollado con conexión a base de datos H2 para ambiente de Desarrollo
+application.description = Microservicio de respaldo de Clientes desarrollado con conexión a base de datos H2 para ambiente de Desarrollo
 
 #Propiedades del servidor de aplicaciones para ambiente de Desarrollo
 server.port = 4070
