--- a/cjava-clientes-respaldo-prod.properties
+++ b/cjava-clientes-respaldo-prod.properties
@@ -1,5 +1,5 @@
 #Propiedades del banner
-application.description = Microservicio de respaldo de Socios desarrollado con conexión a base de datos H2 para ambiente de Producción
+application.description = Microservicio de respaldo de Clientes desarrollado con conexión a base de datos H2 para ambiente de Producción
 
 #Propiedades del servidor de aplicaciones para ambiente de Produccion
 server.port = 4071
