--- a/cjava-clientes-respaldo.properties
+++ b/cjava-clientes-respaldo.properties
@@ -1,5 +1,5 @@
 #Propiedades del banner
-application.description = Microservicio de respaldo de Socios desarrollado con conexión a base de datos H2 para ambiente por defecto
+application.description = Microservicio de respaldo de Clientes desarrollado con conexión a base de datos H2 para ambiente por defecto
 
 #Propiedades de la base de datos
 #Propiedades de configuracion de la base de datos de H2
